# pybay2023

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/prod/: Dockerfile
src/pybay2023/domain/: foo.py
src/pybay2023/domain/world_time/: world_time.py
src/pybay2023/service/: cli.py
tests/: mock_response.json  test_cli.py
