[tool.poetry]
name = "pybay2023"
version = "0.1.0"
description = "A demo for packaging python with Poetry, Docker, and Docker Compose"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
jupyter = "^1.0.0"
pandas = "^2.0.3"

[tool.poetry.scripts]
pybay2023 = "pybay2023.service.cli:fetch_date"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
